Add macos support